--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     
 
-          <h1 id="project_title">Profile</h1>
+          <h1 id="project_title">Profile</h1> <a><a href = "img src="https://lh4.googleusercontent.com/6C8ItsNVg13BfmDZp8w5uvaIjkAc2x9LM_3EMdShltvXK8wgQqL3SW1MTNGHUphKrgzfcu_Q70Sn0jw=w1332-h537.jpg""></a>
 
 
         </header>
