--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     
 
-          <h1 id="project_title">Profile</h1> <a><a href = "img src="https://lh4.googleusercontent.com/6C8ItsNVg13BfmDZp8w5uvaIjkAc2x9LM_3EMdShltvXK8wgQqL3SW1MTNGHUphKrgzfcu_Q70Sn0jw=w1332-h537.jpg""></a>
+          <h1 id="project_title">Profile</h1> <a><a href = "hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg"></a>
 
 
         </header>
