--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     
 
-          <h1 id="project_title">Profile <code><a><a href = "hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;></a></code></h1>
+          <h1 id="project_title">Profile <a><a href = "hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;></a></h1>
 
 
         </header>
@@ -39,7 +39,7 @@
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. Position:</h3>
 
-<p>Master's degree Student <code><a><a href="www.aalto.fi/en">Aalto Univ.</a></code></p>
+<p>Master's degree Student <a><a href="www.aalto.fi/en">@Aalto Univ.</a></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. BackGround:</h3>
