--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     
 
-          <h1><h1 id="project_title">Profile</h1> hlink.address = 'https://github.com/scanny/python-pptx' <a><a href = ""><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;></a>
+          <h1><h1 id="project_title">Profile</h1> <a><a href = "#"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;></a>
 
 
         </header>
