--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <!-- HEADER -->
     
 
-          <h1><h1 id="project_title">Profile</h1> <code>&lt;Home &gt;<a href = "hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;></code>
-<p>You can send me <a href="hyunsookim011@gmail.com">@mail</a> or feedback on <code>&lt;Twitter&gt;<a href="https://twitter.com/hyunsookim011"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/220px-Twitter_bird_logo_2012.svg.png" alt="twitter image"; style="width:20px;height:20px;"></code>
+          <h1><h1 id="project_title">Profile</h1> 
+ <code>&lt;A&gt;<a href="hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;></code>
+ <code>&lt;Twitter&gt;<a href="https://twitter.com/hyunsookim011"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/9/9f/Twitter_bird_logo_2012.svg/220px-Twitter_bird_logo_2012.svg.png" alt="twitter image"; style="width:20px;height:20px;"></code>
 
         </header>
     </div>
