--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
           <h1><h1 id="project_title">Profile</h1> 
  
- <code>&lt;Home&gt;HOME<a href="hyunsookim358.github.io.git"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;" alt="Home";></code>
+ <a href="hyunsookim358.github.io.git">#Home<img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;" alt="Home";>
         </header>
     </div>
     <!-- MAIN CONTENT -->
