--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<a href = "hyunsookim358.github.io">Home</a>
+<a href = "http://hyunsookim358.github.io">Home</a>
 <html>
 
   <head>
