--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <h1><h1 id="project_title">Profile</h1> 
  
- <a href="hyunsookim358.github.io.git">#Home<img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;" alt="Home";>
+ <a href="http://hyunsookim358.github.io">#Home<img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;" alt="Home";>
         </header>
     </div>
     <!-- MAIN CONTENT -->
