--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Profile</title>
-  <h1><h1 id="project_title">Profile</h1>
+  <h1><h1 id="project_title"><center>Profile</center></h1>
   </head>
   
   <body>
@@ -19,7 +19,7 @@
 
            
  
-   <a href="http://hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;" alt="Home";>
+   <right><a href="http://hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;" alt="Home";></right>
      
     </div>
     <!-- MAIN CONTENT -->
