--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p>Hyunsoo Kim.</p>
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. Position:</h3>
-<p>Master's degree Student <a><a href="www.aalto.fi/en">@Aalto Univ.</a></p>
+<p>Master's degree Student <a><a href="http://www.aalto.fi/en">@Aalto Univ.</a></p>
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. BackGround:</h3>
 <p>Studied Mechanical Engineer as Bachelor in S.Korea. Worked Several years @HVAC Companies.</p>
