--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>Master's degree Student <a><a href="http://www.aalto.fi/en">@Aalto Univ.</a></p>
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. BackGround:</h3>
-<p>Studied Mechanical Engineer as Bachelor in S.Korea. Worked Several years @HVAC Companies.</p>
+<p>Studied Mechanical Engineer as Bachelor in S.Korea. Worked Several years <a href="https://en.wikipedia.org/wiki/HVAC">@HVAC Companies.</p></a>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. Hobby:</h3>
 <p>Watching Baseball, IceHockey. Like to listen metal Music / Interested in 3D Printer.</p>
