--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <a href="http://hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Htiy64eHSoc/VXwhzeWb-MI/AAAAAAAAAV4/LxAVnIARJFQ/w142-h118-no/home.jpg" style="width:50px;height:50px;" alt="Home"; align="right";>
+        <a href="http://hyunsookim358.github.io"><img src="https://lh3.googleusercontent.com/-Apsosnt_U94/WT_wWeXVeNI/AAAAAAAABl0/TxkCGWuspYEQ6_c1asuFDtpNTvFKSUirACJoC/s200-p/images.jpg" style="width:50px;height:50px;" alt="Home"; align="right";>
         <br>
         <br>
         <h3>
@@ -39,7 +39,7 @@
 <p>Master's degree Student <a><a href="http://www.aalto.fi/en">@Aalto Univ.</a></p>
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. BackGround:</h3>
-<p>Studied Mechanical Engineer as Bachelor in S.Korea. Worked Several years <a href="https://en.wikipedia.org/wiki/HVAC">@HVAC Companies.</p></a>
+<p>Studied Mechanical Engineer as Bachelor in S.Korea. Worked several years <a href="https://en.wikipedia.org/wiki/HVAC">@HVAC Companies.</p></a>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. Hobby:</h3>
 <p>Watching Baseball, IceHockey. Like to listen metal Music / Interested in 3D Printer.</p>
