--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p>Watching Baseball, IceHockey. Like to listen metal Music / Interested in 3D Printer.</p>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. Projects Recently Done :</h3>
-<p>Duckter, EDGE, Laser Sintering.</p>
+<p>Duckter, EDGE, Laser Sintering for IoT </p>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>-. Address:</h3>
 <p>Otaniemi, Finland.</p>
